--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             },100)
         },2000)
         setTimeout(function(){
-            document.querySelector("#heart__letter").classList.add("animationOp");
+            document.querySelector(".heart__letter").classList.add("animationOp");
             document.querySelector(".love__img").classList.add("animationOp");
             document.querySelector("#mewmew").classList.add("animationOp");
         },2800)
